--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
                          <i class="fa-solid fa-cart-shopping"></i>
                         Giỏ hàng
                       </button>
-                      
+                      <button class="btn">
+                          <a href="#">
+                            <i class="fa-solid fa-user"></i>
+                            Admin
+                          </a>
+                      </button>
                       <!-- Modal -->
                       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
@@ -62,7 +67,7 @@
                         </div>
                       </div>
                 </div>
-                <a href="#">Admin</a>
+               
             </div> 
         </div>
         <nav class="container">
