update code final 1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         Giỏ hàng
                       </button>
                       <button class="btn">
-                          <a href="#">
+                          <a target="_blank" href="./Admin/View/admin.html">
                             <i class="fa-solid fa-user"></i>
                             Admin
                           </a>
